# nrv-gtk

./: README.md  meson.build
data/: meson.build  xyz.gelez.nrv.appdata.xml  xyz.gelez.nrv.desktop
debian/: changelog  control  copyright  rules
flatpak/: xyz.gelez.nrv.json
src/: Api.vala  App.vala  HeaderBar.vala  Home.vala  MainWindow.vala  WordPage.vala
